--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -154,8 +154,8 @@ input, select, textarea {
 	}
 
 		a:hover {
-			color: #ef8376;
-			border-bottom-color: transparent;
+	color: #151515;
+	border-bottom-color: transparent;
 		}
 
 	sub {
@@ -2049,22 +2049,22 @@ input, select, textarea {
 	input[type="reset"],
 	button,
 	.button {
-		position: relative;
-		display: inline-block;
-		background: #45b6fe;
-		color: #fff;
-		text-align: center;
-		border-radius: 0.5em;
-		text-decoration: none;
-		padding: 0.65em 3em 0.65em 3em;
-		border: 0;
-		cursor: pointer;
-		outline: 0;
-		font-weight: 300;
-		-moz-transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-		-webkit-transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-		-ms-transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-		transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+	position: relative;
+	display: inline-block;
+	background:black;
+	color: #fff;
+	text-align: center;
+	border-radius: 0.5em;
+	text-decoration: none;
+	padding: 0.65em 3em 0.65em 3em;
+	border: 0;
+	cursor: pointer;
+	outline: 0;
+	font-weight: 300;
+	-moz-transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+	-webkit-transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+	-ms-transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+	transition: background-color 0.35s ease-in-out, color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
 	}
 
 		input[type="button"]:hover,
@@ -2072,8 +2072,8 @@ input, select, textarea {
 		input[type="reset"]:hover,
 		button:hover,
 		.button:hover {
-			color: #fff;
-			background: #ef8376;
+	color: #fff;
+	background: black;
 		}
 
 		input[type="button"].alt,
@@ -2217,14 +2217,17 @@ input, select, textarea {
 			}
 
 		#header .button {
-			display: inline-block;
-			border-radius: 100%;
-			width: 4.5em;
-			height: 4.5em;
-			line-height: 4.5em;
-			text-align: center;
-			font-size: 1.25em;
-			padding: 0;
+	display: inline-block;
+	border-radius: 0%;
+	width: 11.5em;
+	height: 2.5em;
+	line-height: -2em;
+	text-align: center;
+	font-size: 1.25em;
+	padding-top: 8px;
+	padding-right: 8px;
+	padding-left: 8px;
+	padding-bottom: 8px;
 		}
 
 		#header hr {
@@ -2321,6 +2324,7 @@ input, select, textarea {
 			}
 
 			#nav > ul > li {
+				background-color: dimgrey;
 				display: inline-block;
 				margin: -9px 0.5em 0 0.5em;
 				border-radius: 0.5em;
