--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2324,16 +2324,16 @@ input, select, textarea {
 			}
 
 			#nav > ul > li {
-				background-color: dimgrey;
-				display: inline-block;
-				margin: -9px 0.5em 0 0.5em;
-				border-radius: 0.5em;
-				padding: 0.85em;
-				border: solid 1px transparent;
-				-moz-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
-				-webkit-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
-				-ms-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
-				transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+	background-color: black;
+	display: inline-block;
+	margin: -9px 0.5em 0 0.5em;
+	border-radius: 0.5em;
+	padding: 0.85em;
+	border: solid 1px transparent;
+	-moz-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+	-webkit-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+	-ms-transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
+	transition: color 0.35s ease-in-out, border-color 0.35s ease-in-out;
 			}
 
 				#nav > ul > li.active {
